--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hallo Koshash
+<!DOCTYPE html> 
+<html> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
+
+        <title>Iman's HCDE 439 Physical Computing Page!</title> 
+
+        <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+
+    </head> 
+    <body> 
+
+        <div class="header">
+            <h1>Iman's HCDE 439 Physical Computing Page!</h1>
+            <p>
+            <img src="Imanpic.JPG" width=400></a>
+            </p>
+            <p>
+            My name is Iman! I'm studying HCDE and my all time fav TV show is The Office, but currently I can't stop watching Money Heist.
+            </p>
+            </div>
+	</div>
+    </body>
+</html>
