--- a/index.html
+++ b/index.html
@@ -17,9 +17,27 @@
             <img src="Imanpic.JPG" width=400></a>
             </p>
             <p>
-            My name is Iman! I'm studying HCDE and my all time fav TV show is The Office, but currently I can't stop watching Money Heist.
+            My name is Iman! I am a senior studying HCDE and my all time favorite TV show is The Office, but currently I can't stop watching Money Heist!
             </p>
-            </div>
+	</div>
+	<div class ="assignments">
+
+			<div class="assignment">
+				<a href="assignment1.html"><h2>Assignment 1: Blink!</h2>
+					<img src="blinkpic.JPG" width=250></a>
+
+					<p>
+			Assignment 1 was to utilize Arduino to make 3 LED lights blink!
+					<p>
+				</div>
+
+				<div class="assignemnt">
+					<a href="assignment2.html"><h2>Assignment 2: Fade!</h2>
+						<img src="red-panda.jpg" width=250></a>
+					<p> 
+			Assignment 2 was a panda!
+					</p>
+				</div>
 	</div>
     </body>
 </html>
