--- a/assignment1.html
+++ b/assignment1.html
@@ -14,14 +14,21 @@
         <div class="header">
             <h1>Assignment 1: Blink!</h1>
             <p>
-            Purpose: Create a pattern with 3 LED lights by using a circuit.
-            <p>
             <img src="blink.GIF" width=400></a>
             </p>
             <p>
             Here is all the documentation for assignment 1!
             </p>
         </div>
+            <h2>Schematic</h2>
+            <p>
+                <img src="schematic.JPG" width=400></a>
+            <p>
+                I chose to use 220 ohm resistors because it seemed to work best with the LED lights. The white, red, and blue each used 220 ohm resistors. 
+        </div>
+            <h2>Code Snippet</h2>
+            <p>
+                <img src="code.JPG" width=400></a>
         
     </body>
 </html>
