--- a/assignment1.html
+++ b/assignment1.html
@@ -22,7 +22,7 @@
         </div>
             <h2>Schematic</h2>
             <p>
-                <img src="schematic.jpg" width=400></a>
+                <img src="Schematic.jpg" width=400></a>
             <p>
                 I chose to use 220 ohm resistors because it seemed to work best with the LED lights. The white, red, and blue each used 220 ohm resistors. 
         </div>
