--- a/index.html
+++ b/index.html
@@ -28,7 +28,16 @@
 
 					<p>
 			Assignment 1 was to utilize Arduino to make 3 LED lights blink!
+					</p>
+				</div>
+
+			<div class="assignment">
+				<a href="assignment2.html"><h2>Assignment 2: Fade!</h2>
+					<img src="fade.jpg" width=250></a>
+
 					<p>
+			Assignment 2 was to utilize Arduino to make 1 LED light turn on with the click of a button, and then fade out!
+					</p>
 				</div>
 
 	</div>
