--- a/assignment2.html
+++ b/assignment2.html
@@ -19,7 +19,7 @@
             </p>
             </p>
         </div>
-            <h2>Schematic</h2>
+            <h2>Schematic.</h2>
             <p>
                 <img src="a2schematic.jpg" width=400></a>
             <p>
@@ -29,7 +29,7 @@
                 3.2 = 0.02 x R(ohms)
                 R = 3.2/0.02 = 160(ohms)
         </div>
-            <h2>Code Snippet</h2>
+            <h2>Code Snippet!</h2>
             <p>
                 <img src="a2code.jpg" width=600></a>
         
