--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 					</p>
 				</div>
 
+			<div class="assignment">
+				<a href="assignment3.html"><h2>Assignment 3: Input Output!</h2>
+					<img src="inputoutput.jpg" width=250></a>
+
+					<p>
+			Assignment 3 was to utilize a sensor to make an LED light turn on or off with some change from the physical world!
+					</p>
+
 	</div>
     </body>
 </html>
