--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<div class="assignment">
 				<a href="assignment3.html"><h2>Assignment 3: Input Output!</h2>
-					<img src="inputoutput.jpg" width=251></a>
+					<img src="sensors.jpg" width=251></a>
 
 					<p>
 			Assignment 3 was to utilize a sensor to make an LED light turn on or off with some change from the physical world!
