--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
 			Assignment 3 was to utilize a sensor to make an LED light turn on or off with some change from the physical world!
 					</p>
 
+			<div class="assignment">
+				<a href="assignment4.html"><h2>Assignment 4: High(er) Voltage and Transistors!</h2>
+					<img src="higher.jpg" width=251></a>
+
+					<p>
+			Assignment 4 was to use a transistor to control load power separate from logic power!
+					</p>
+
 	</div>
     </body>
 </html>
