--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
 			Assignment 4 was to use a transistor to control load power separate from logic power!
 					</p>
 
+			<div class="assignment">
+				<a href="assignment5.html"><h2>Assignment 5: Motors!</h2>
+					<img src="motor.jpg" width=251></a>
+
+					<p>
+			Assignment 5 was to control a motor with the use of a joystick!
+					</p>
+
 	</div>
     </body>
 </html>
