--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
 			Assignment 5 was to control a motor with the use of a joystick!
 					</p>
 
+				<div class="assignment">
+				<a href="assignment6.html"><h2>Assignment 6: Datalogging!</h2>
+					<img src="datalogging.jpg" width=251></a>
+
+					<p>
+			Assignment 6 was to create a webpage with p5.js that interacts with data that’s coming from our arduino over serial!
+					</p>
+
 	</div>
     </body>
 </html>
