--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
 			Assignment 6 was to create a webpage with p5.js that interacts with data that’s coming from our arduino over serial!
 					</p>
 
+				<div class="assignment">
+				<a href="assignment7.html"><h2>Assignment 7: Computer Control!</h2>
+					<img src="computercontrol.jpg" width=251></a>
+
+					<p>
+			Assignment 7 was to create a webpage with p5.js that interacts with my arduino!
+					</p>
+
 	</div>
     </body>
 </html>
