--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
 			Assignment 7 was to create a webpage with p5.js that interacts with my arduino!
 					</p>
 
+				<div class="assignment">
+				<a href="assignment8.html"><h2>Assignment 8: Soldering!</h2>
+					<img src="soldering1.jpg" width=251></a>
+
+					<p>
+			Assignment 8 was to solder a small circuit!
+					</p>
 	</div>
     </body>
 </html>
