--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<img src="higher.jpg" width=251></a>
 
 					<p>
-			Assignment 4 was to use a transistor to control load power separate from logic power!
+			Assignment 4  to use a transistor to control load power separate from logic power!
 					</p>
 
 			<div class="assignment">
