--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
 					<p>
 			Assignment 8 was to solder a small circuit!
 					</p>
+
+				<div class="assignment">
+				<a href="assignment10.html"><h2>Final Project: Intruder Alert!</h2>
+					<img src="alarmsystem.jpg" width=251></a>
+
+					<p>
+			My final project utilizes a buzzer and ultrasonic sensor to serve as an alarm system for families homes!
+					</p>
+
 	</div>
     </body>
 </html>
