--- a/assignment10.html
+++ b/assignment10.html
@@ -42,7 +42,7 @@
         </div>
             <h2>Prototype Setup!</h2>
             <p>
-            <img src="alarmsystem2.jpg" width=400></a>
+            <img src="alarmsystem2.JPG" width=400></a>
             <p>
             Through the setup, I taped the LED strip to the door frame, and placed the ultrasonic sensor towards the lower half of the door frame. 
             <p>This allowed the user to not have the sensor in their direct view, while also allowing the sensor to serve it's purpose.
@@ -60,7 +60,7 @@
             <p>
            
         </div>
-            <h2>Code Snippet!</h2>
+            <h2>Code!</h2>
             <p>
             My code was fairly straightforward, but I ran into a few problems with the ultrasonic sensor in my code. Determing the distance between the door and sensor, and implementing 
             <p>
