final project index

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 				<div class="assignment">
 				<a href="assignment10.html"><h2>Final Project: Intruder Alert!</h2>
-					<img src="alarmsystem.jpg" width=251></a>
+					<img src="concept.jpg" width=251></a>
 
 					<p>
 			My final project utilizes a buzzer and ultrasonic sensor to serve as an alarm system for families homes!
